--- a/cautruc ifelse.html
+++ b/cautruc ifelse.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <script>
-  let h = prompt('Dự báo thời tiết hôm nay có mưa không ?')
-  if (h == 'có') {
-    alert('Đúng!');
+  let h = prompt('what is the "officali" name of javaScript?');
+  if (h == 'ECMAScript') {
+    alert('Right!');
   } else {
-    alert("bạn không xem dự báo thời tiếc rồi !!");
+    alert("you don't not know ? ECMAScript");
   }
 </script>
 </body>
