--- a/cautrucifElse.html
+++ b/cautrucifElse.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <script>
-  let usernName =prompt("whho is there ?");
-  if (usernName =='Amin'){
+  let userName =prompt("who is there ?");
+  if (userName =='Amin'){
     alert('Wellcome')
-  }else if (usernName == null){
+  }else if (userName == null){
     alert('Canceled');
   }else {
     alert("I don't no you ");
